  when creating weakref objects.

- bpo-29438: Fixed use-after-free problem in key sharing dict.

- Issue #29319: Prevent RunMainFromImporter overwriting sys.path[0].

- Issue #29337: Fixed possible BytesWarning when compare the code objects.
  Warnings could be emitted at compile time.

Extension Modules
-----------------

- Issue #29169: Update zlib to 1.2.11.

Library
-------

- bpo-29870: Fix ssl sockets leaks when connection is aborted in asyncio/ssl
  implementation. Patch by Michaël Sghaïer.

- bpo-29743: Closing transport during handshake process leaks open socket.
  Patch by Nikolay Kim

- bpo-29406: asyncio SSL contexts leak sockets after calling close with
  certain servers.
  Patch by Nikolay Kim

- bpo-27585: Fix waiter cancellation in asyncio.Lock.
  Patch by Mathieu Sornay.

- bpo-30418: On Windows, subprocess.Popen.communicate() now also ignore EINVAL
  on stdin.write() if the child process is still running but closed the pipe.

- bpo-30378: Fix the problem that logging.handlers.SysLogHandler cannot
  handle IPv6 addresses.

- bpo-29960: Preserve generator state when _random.Random.setstate()
  raises an exception.  Patch by Bryan Olson.

- bpo-30414: multiprocessing.Queue._feed background running
  thread do not break from main loop on exception.

- bpo-30003: Fix handling escape characters in HZ codec.  Based on patch
  by Ma Lin.

- bpo-30301: Fix AttributeError when using SimpleQueue.empty() under
  *spawn* and *forkserver* start methods.

- bpo-30329: imaplib and poplib now catch the Windows socket WSAEINVAL error
  (code 10022) on shutdown(SHUT_RDWR): An invalid operation was attempted.
  This error occurs sometimes on SSL connections.

- bpo-30375: Warnings emitted when compile a regular expression now always
  point to the line in the user code.  Previously they could point into inners
  of the re module if emitted from inside of groups or conditionals.

- bpo-30048: Fixed ``Task.cancel()`` can be ignored when the task is